k8s/backend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend-app
  namespace: auth-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      name: backend-app
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: dmoayad/authentication_app_backend:latest
          ports:
            - containerPort: 3000
