k8s/backend_clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip-service
  namespace: auth-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: backend-app
